<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="16dp" android:gravity="center">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/calcetinder" android:textSize="32sp" android:textStyle="bold"
        android:layout_marginBottom="32dp" />
    <EditText android:id="@+id/et_email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/email"
        android:inputType="textEmailAddress" android:layout_marginBottom="16dp" />
    <EditText android:id="@+id/et_contrasena" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/contrasena"
        android:inputType="textPassword" android:layout_marginBottom="24dp" />
    <Button android:id="@+id/btn_login" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/login" android:layout_marginBottom="8dp" />
    <Button android:id="@+id/btn_registro" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/registro" />
</LinearLayout>